# init-configurator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  project.yaml  pyproject.toml
.claude/skills/bootstrap/: SKILL.md
.claude/skills/project-base/: SKILL.md
.claude/skills/skill-manager/: SKILL.md
.claude/skills/skill-manager/references/: authoring.md  evolve.md
.claude/skills/socials/: SKILL.md
.claude/skills/workflow/: SKILL.md
.github/workflows/: ci.yml
docs/: structure.md  vision.md
docs/decisions/: 0001-amputate-the-scaffolder.md  0002-ship-the-genome-in-the-package.md  0003-retire-project-base-into-the-constitution.md
docs/design/: agentic-base.md  manifest-v1.md
docs/reviews/: 2026-07-09-standards-rot-and-release.md  2026-07-09-v1-readiness.md
docs/state/: log.md  miss-log.md  now.md  roadmap.md
schema/: project.schema.json
src/init_configurator/: __init__.py  beacons.py  cli.py  describe.py  docker_mode.py  doctor.py  env_contract.py  languages.py  local_mode.py  manifest.py  path_lint.py  paths.py  runner.py  runtimes.py  spawn.py  textfile.py
src/init_configurator/presets/: __init__.py  common.py  node_preset.py  python_preset.py
tests/: __init__.py  conftest.py  test_beacons.py  test_cli.py  test_console_output.py  test_describe.py  test_docker_mode.py  test_doctor.py  test_env_contract.py  test_genome.py  test_languages.py  test_local_mode.py  test_manifest.py  test_path_lint.py  test_runner.py  test_runtimes.py  test_smoke.py  test_spawn.py
(+16 files in other folders)
