[project]
name = "init-configurator"
version = "0.1.0"
description = "Deterministic ground truth for agent-built projects: one project.yaml drives doctor checks, task running, env contracts, and path linting."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Stepan Karapetiani", email = "stepkarapetiani@gmail.com" }]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
initc = "init_configurator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/init_configurator"]
branch = true

[tool.coverage.report]
show_missing = true
